<resources>
<<<<<<< HEAD
    <string name="Calculadora">Aula3</string>
    <string-array name="operacoes">
        <item>Soma</item>
        <item>Subtração</item>
        <item>Multiplicação</item>
        <item>Divisão</item>
        <item>Exponenciação</item>
        <item>Radiciação</item>
    </string-array>
    <string name="valor1">Valor 1:</string>
    <string name="valor2">Valor 2:</string>
    <string name="resultado">Resultado:</string>
    <string name="selecionar_operacao">Selecionar Operação</string>
    <string name="selecionar_decimais">Selecionar Decimais</string>
=======
    <string name="app_name">Aula1</string>
>>>>>>> 794e6746bfe660a7837a711fd1a966a8a5fe963f
</resources>